// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI/IconButton should render IconButton with size m 1`] = `
<SimpleComposeWrapper [baseline:true]
  className=""
  size="m"
  view="default"
>
  <div
    className="content"
  >
    <IconEdit
      className="iconDefault iconMarginM"
      height={22}
      width={22}
    />
    <div
      className="iconMarginM"
    >
      button
    </div>
  </div>
</SimpleComposeWrapper [baseline:true]>
`;

exports[`UI/IconButton should render IconButton with size s 1`] = `
<SimpleComposeWrapper [baseline:true]
  className=""
  size="s"
  view="default"
>
  <div
    className="content"
  >
    <IconEdit
      className="iconDefault iconMarginS"
      height={18}
      width={18}
    />
    <div
      className="iconMarginS"
    >
      button
    </div>
  </div>
</SimpleComposeWrapper [baseline:true]>
`;
